<resources>
    <string name="app_name">Administracion App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_usuario">Usuario/Email</string>
    <string name="login_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="register">Registrate si aún no lo has hecho</string>
    <string name="recuperarPass">Recuperar contraseña</string>
    <string name="login_error">Introduzca su Usuario y Contraseña.</string>
    <string name="errorMalIntroducido">El usuario y/o contraseña no son correctos</string>
    <string name="register_email">Email</string>
    <string name="register_apellido">Apellido</string>
    <string name="register_nombre">Introduzca su nombre</string>
    <string name="register_tlfno">Telefono</string>
    <string name="register_alias">Alias</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_confirmar">Confirmar Contraseña</string>
    <string name="register_btn_enviar">Enviar datos</string>
    <string name="txtEmail">Introduzca su Email</string>
    <string name="titAlertResetPass">Resetear Contraseña</string>
    <string name="txtAlertResetPass">Introduzca su email para poder cambiar su contraseña.</string>
    <string name="home">Home</string>
    <string name="negocio">B.I</string>
    <string name="anadir">Añadir</string>
    <string name="error_anadir">No se pudo completar la acción ya que alguno de los campos está vacio</string>
    <string name="enviar_plato">Crear plato</string>
    <string name="anadir_foto">Subir foto</string>
    <string name="anadir_precio">Precio</string>
    <string name="anadir_ingrediente">Ingredientes</string>
    <string name="anadir_nombre">Nombre</string>
    <string name="upload_foto">Subir foto</string>
    <string name="cerrarsesion">Cerrar sesión</string>
</resources>
